--- a/around.html
+++ b/around.html
@@ -26,8 +26,8 @@
 	<header class="drawer drawer--right">
 			<div class="header-all" id="top_back">
 				<div class="header-left">
-					<a href="./index.php#top_back">
-						<img src="./assets/img/IMG_3238.PNG" alt="">
+					<a href="./index.html#top_back">
+							<img src="./assets/img/IMG_3238.PNG" alt="">
 					</a>
 				</div>
 				<div class="top-menu">
@@ -54,12 +54,12 @@
 				<!-- ハンバーガー -->
 				<nav class="drawer-nav">
 					<ul class="drawer-menu">
-					  <li><a href="./index.php#about">About</a></li>
-						<li><a href="./index.php#introduce-inside">Room</a></li>
-						<li><a href="./index.php#price">Price</a></li>
-						<li><a href="./index.php#access">Access</a></li>
-						<li><a href="./index.php#contact">Contact</a></li>
-						<li><a href="./around.php">Around</a></li>
+					  <li><a href="./index.html#about">About</a></li>
+						<li><a href="./index.html#introduce-inside">Room</a></li>
+						<li><a href="./index.html#price">Price</a></li>
+						<li><a href="./index.html#access">Access</a></li>
+						<li><a href="./index.html#contact">Contact</a></li>
+						<li><a href="./around.html">Around</a></li>
 						<li><a href="https://www.instagram.com/cocowave_okinawa/"><i class="fab fa-instagram iconsize"></i></a></li>
 					</ul>
 				</nav>
