--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 				<!-- ハンバーガー -->
 				<nav class="drawer-nav">
 					<ul class="drawer-menu">
-					  <li><a href="#about">About</a></li>
-						<li><a href="#introduce-inside">Room</a></li>
-						<li><a href="#price">Price</a></li>
-						<li><a href="#access">Access</a></li>
-						<li><a href="#contact">Contact</a></li>
-						<li><a href="./around.php">Around</a></li>
+					  <li><a href="./index.html#about">About</a></li>
+						<li><a href="./index.html#introduce-inside">Room</a></li>
+						<li><a href="./index.html#price">Price</a></li>
+						<li><a href="./index.html#access">Access</a></li>
+						<li><a href="./index.html#contact">Contact</a></li>
+						<li><a href="./around.html">Around</a></li>
 						<li><a href="https://www.instagram.com/cocowave_okinawa/"><i class="fab fa-instagram iconsize"></i></a></li>
 					</ul>
 				</nav>
