カレンダー削除 youtube変更

--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
 					</p>
 				</div>
 				<div class="video-content">
-					<iframe src="https://www.youtube.com/embed/B1T06UhcX0Q"
-						title="YouTube video player" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/kTNLOwOh58I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 
 			</section>
@@ -145,7 +142,7 @@
 			<section id="price">
 				<h1 class="title-size">Price</h1>
 				<ul class="price-nav">
-					<li class="price-content btn-1"> <a href="./day_price.html"> Day</a></li>
+					<li class="price-content btn-1"> <a href="./day_price.html" > Day</a></li>
 					<li class="price-content btn-2"><a href="./week_price.html"> Weekly</a></li>
 					<li class="price-content btn-3"><a href="./mounth.html">Monthly</a></li>
 				</ul>
