--- a/day_price.html
+++ b/day_price.html
@@ -73,8 +73,7 @@
 						<p class="price-detail">¥25,000〜/1Day</p>
 						<p　class="calendar_detail">下記カレンダーに料金が記載されています</p>
 						<div class="calendar">
-						<p>※上記は4人までの清掃費込みの料金です。 <br>
-								5人以上は1人増えるごとに+¥2,500/泊です。
+							<iframe src="https://calendar.google.com/calendar/embed?src=cocowavestay%40gmail.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>								5人以上は1人増えるごとに+¥2,500/泊です。
 						</p>
 						<a href="./index.html#contact" class="btn-flat-stripe">ご予約はこちら</a>
 					</div>
