--- a/day_price.html
+++ b/day_price.html
@@ -73,16 +73,18 @@
 						<p class="price-detail">¥25,000〜/1Day</p>
 						<p　class="calendar_detail">下記カレンダーに料金が記載されています</p>
 						<div class="calendar">
-							<iframe src="https://calendar.google.com/calendar/embed?src=cocowavestay%40gmail.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>								5人以上は1人増えるごとに+¥2,500/泊です。
-						</p>
+							<iframe src="https://calendar.google.com/calendar/embed?src=cocowavestay%40gmail.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>							
+							<p>5人以上は1人増えるごとに+¥2,500/泊です。<br>
+								 Weekliyやmounthlyについてはメールでお問い合わせ下さい。
+							</p>	
 						<a href="./index.html#contact" class="btn-flat-stripe">ご予約はこちら</a>
 					</div>
 				</div>		
     </section>
 		<section id="price">
 			<ul class="price-nav"> 
-				<li class="price-content_2 btn-2"><a href="./week_price.html"> <i class="fas fa-arrow-left"></i>Weekly</a></li>
-				<li class="price-content_2 btn-3"><a href="./mounth.html">Monthly<i class="fas fa-arrow-right"></i></a></li>
+				<!-- <li class="price-content_2 btn-2"><a href="./week_price.html"> <i class="fas fa-arrow-left"></i>Weekly</a></li> -->
+				<!-- <li class="price-content_2 btn-3"><a href="./mounth.html">Monthly<i class="fas fa-arrow-right"></i></a></li> -->
 			</ul>
 	  </section>
 	</main>
