--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<title> cocowave</title>
 
 	<!-- css　ファイル -->
-  <link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css">
-  <link rel="stylesheet" type="text/css" href="./assets/css/slick.css" />
+	<link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/slick.css" />
 	<link rel="stylesheet" href="./assets/css/reset.css">
 	<link rel="stylesheet" href="./assets/css/drawer.css">
 	<link rel="stylesheet" href="./assets/css/style.css">
@@ -56,15 +56,15 @@
 						<li><a href="https://www.instagram.com/cocowave_okinawa/"><i class="fab fa-instagram iconsize"></i></a></li>
 					</ul>
 				</div>
-					<!-- ドロワー -->			
-					<button type="button" class="drawer-toggle drawer-hamburger">
+				<!-- ドロワー -->
+				<button type="button" class="drawer-toggle drawer-hamburger">
 					<span class="sr-only">toggle navigation</span>
 					<span class="drawer-hamburger-icon"></span>
 				</button>
 				<!-- ハンバーガー -->
 				<nav class="drawer-nav">
 					<ul class="drawer-menu">
-					  <li><a href="./index.html#about">About</a></li>
+						<li><a href="./index.html#about">About</a></li>
 						<li><a href="./index.html#introduce-inside">Room</a></li>
 						<li><a href="./index.html#price">Price</a></li>
 						<li><a href="./index.html#access">Access</a></li>
@@ -99,24 +99,76 @@
 				<h1 class="title-size">About</h1>
 				<div class="about-contents">
 					<p>
-						ココウェーブは北谷町にあり、庭とテラスを提供しています。美浜アメリカンビレッジから2.5km、キャンプフォースターから9km、嘉手納基地から5.7km、サンセットビーチから3.2kmです。エアコン付きの宿泊施設で、敷地内の専用駐車場、無料WiFiを利用できます。
-						1階にある別荘にはベッドルーム2室、薄型衛星テレビ、設備の整ったキッチン（電子レンジ、冷蔵庫、洗濯機、オーブン、コンロ付）が備わります。
-						最寄りの那覇空港まで23kmです。あなたの言語でサポート！
+						ミッドセンチュリー×Surfスタイルをコンセプトに<br>
+						沖縄独特の外人住宅をリノベーションした一棟貸しタイプの民泊です。<br>
+						CoCoWave の位置する北谷町は基地のある町で、<br>
+						沖縄ローカル×アメリカンスタイルがMIXしたユニークな街です。<br>
+						特に、徒歩5分圏内の砂辺・宮城海岸エリアでは、<br>
+						サーフィンやSUP、サンセットを楽しむことができます。<br>
+						CoCoWaveで滞在は日々の疲れや都会から少し抜け出して、<br>
+						沖縄ならではのビーチライフやゆったりとした時間をお過ごしください☺︎
 					</p>
 				</div>
 				<div class="video-content">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/kTNLOwOh58I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/kTNLOwOh58I" title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 				</div>
 
 			</section>
 			<!-- 部屋紹介-->
 			<section id="introduce-inside">
 				<h1 class="title-size">Room</h1>
-				<img class="inside-main-pic" src="./assets/img/bedroom.jpeg" alt="bedroom1">
+				<div class="bgimg-slider_2"></div>
 				<div class="inside">
-					<p class="inside-description">クイーンベット ×
-						2台で最大5名を定員としたお部屋です。ベットのほかリビングソファーやレンジ･ポットを備えたキッチン、広いバスタブを備えたシャワールームと同時にお二人が使える洗面台を備えたトイレがあり、調理用具や食器、タオルなどもご用意があります。また屋外には、パーティーが可能なパラソル付きのデッキテーブルとBBQコンロも備えてあります。
-					</p>
+					<div class="inside-description">
+						<table ellpadding="3" class="inside-description_2">
+								<thead>
+										<tr>
+												<th>【Room Blue】</th>
+												<th>【Room Yellow】</th>
+										</tr>
+								</thead>
+								<tbody>
+										<tr>
+												<td>ダブルベットップ×2</td>
+												<td>ダブルベッド×1<br>
+													キッズベッド×1<br>
+													キッズチェア×1<br></td>
+										</tr>
+								</tbody>
+								<thead>
+									<tr>
+											<th>【Living Room】</th>
+											<th>【Kitchen】</th>
+									</tr>
+							</thead>
+							<tbody>
+									<tr>
+											<td>クイーンサイズソファーベッド<br>
+												シングルサイズソファーベッド<br></td>
+											<td>テーブル・チェア<br>
+												ベビーチェア(食事用)<br></td>
+									</tr>
+							</tbody>
+							<thead>
+								<tr>
+										<th>【Shower Room】</th>
+										<th>【Bath Room】</th>
+								</tr>
+						</thead>
+						<tbody>
+								<tr>
+										<td>	トイレ<br>
+											オーバーヘッドシャワー<br></td>
+										<td>ユニットバス<br>
+											トイレ<br>
+											ベビーバス<br></td>
+								</tr>
+						</tbody>
+						</table>
+				</div>
 					<img class="floor_plan" src="./assets/img/madori.png" alt="madori">
 					<ul class="room_gallery">
 						<li> <img src="./assets/img/betroom1.jpeg" alt="">
@@ -134,18 +186,45 @@
 					</ul>
 					<div class="room-description">
 						<p>主な設備</p>
-						<p> ベット×2台、3人掛けソファ、テレビ、シューズボックス、バスタブ、シャワールーム、トイレ、洗面台、シンク、レンジ、ポット、食器、コインランドリー、駐車場、バルコニー、BBQコンロ</p>
+						<p> ・キッチン(冷蔵庫、レンジ、トースター、炊飯器、ケトル、調理器具、食器類、IHコンロ) <br>
+							・Wi-Fi(室内・室外　仕事スペース有り)<br>
+							無料駐車場(3台)<br>
+							・TV<br>
+							・洗濯機、乾燥機<br>
+							・AC,暖房<br>
+							・お風呂(ヘアドライヤー、シャンプー、コンディショナー、ボディーソープ、歯ブラシ、ボディタオル)<br>
+							・アイロン、ハンガー<br>
+							・テラス(ガーデンテーブル、チェア)<br>
+							・キッズ用品(ベビーベッド、ベビーバス、子供用食器、ベビーチェア)<br></p>
 					</div>
 				</div>
 			</section>
 			<!-- price -->
 			<section id="price">
 				<h1 class="title-size">Price</h1>
-				<ul class="price-nav">
-					<li class="price-content btn-1"> <a href="./day_price.html" > Day</a></li>
-					<li class="price-content btn-2"><a href="./week_price.html"> Weekly</a></li>
-					<li class="price-content btn-3"><a href="./mounth.html">Monthly</a></li>
-				</ul>
+				<div class="price_btn">
+					<img src="./assets/img/spanky_1.PNG" alt="">
+					<ul class="price-nav">
+						<li class="price-content btn-1"> <a href="./day_price.html"> Click here!!</a></li>
+						<!-- <li class="price-content btn-2"><a href="./week_price.html"> Weekly</a></li> -->
+						<!-- <li class="price-content btn-3"><a href="./mounth.html">Monthly</a></li> -->
+					</ul>
+				</div>
+
+				<div class="price_box">
+					<h2 class="title-size_2">Policy</h2>
+					<p class="price_contents"> •チェックイン15:00-22:00 <br>
+						(前もって到着時間を宿にお知らせください)<br>
+						•チェックアウト-10:00<br>
+						•キャンセルについて<br>
+
+						•ペット不可<br>
+						•パーティー、イベント不可<br>
+						•静かにしてほしい時間帯22:00-8:00<br>
+						•禁煙<br>
+					</p>
+				</div>
+
 			</section>
 			<!-- アクセス -->
 			<section id="access">
@@ -159,18 +238,16 @@
 							<p>〒904-0112 </p>
 							<p>沖縄県中頭郡北谷町浜川１５６−４</p>
 						</div>
-						<div class="adress-description"> 
+						<div class="adress-description">
 							<p>
-							国道58号線から車を北向けに走らせ<br>
-							浜川交差点を左折します。<br>
-							左折して直ぐに「乃が美」という食パン専門店のが右側に見えますので<br>
-							その手前の道を右折します。(右側にある1個目の曲がり角)<br>
-							300m程、直進すると左手に「Caracalla」というカフェが見えてきます。<br>
-							そこを過ぎると直ぐ,cocowaveという立て看板が見えますので<br>
-							看板に沿ってお越し下さい！<br>
+								コロナ対策について<br>
+								・施設入り口非接触型検温消毒ディスペンサーを設置し、検温の実施をしております。<br>
+								・沖縄県感染防止対策徹底宣言ステッカー(シーサーステッカー)認証済み<br>
+								・セルフチェックイン対応(スマートロックで入室できます)<br>
+								・清掃の強化の実施(使い捨てスリッパ導入、リネン類の高温消毒　等)<br>
 							</p>
 							<!-- <img class="wavelogo" src="./assets/img/wave.png" alt="波">	 -->
-							<img class="wavelogo" src="./assets/img/sun_1.png" alt="波">	
+							<img class="wavelogo" src="./assets/img/sun_1.png" alt="波">
 						</div>
 					</div>
 				</div>
@@ -180,21 +257,43 @@
 				<h1 class="title-size">Contact</h1>
 				<p>〜問い合わせ〜</p>
 				<form id="form">
-					<div class="field">						
-						<input type="text" name="from_name" id="from_name" placeholder="Name" >
+					<div class="field">
+						<input type="text" name="from_name" id="from_name" placeholder="Name">
 					</div>
-					<div class="field">						
-						<input type="text" name="reply_to" id="reply_to" placeholder="Email" >
+					<div class="field">
+						<input type="text" name="reply_to" id="reply_to" placeholder="Email">
 					</div>
-					<div class="field">						
-						<input type="text" name="tel" id="tel"  placeholder="Tel" >
+					<div class="field">
+						<input type="text" name="tel" id="tel" placeholder="Tel">
 					</div>
-					<div class="field">						
-						<input type="text" name="message" id="message"　cols="30" rows="10" placeholder="問い合わせ内容" class="contact_contents">
-					</div> 
-						<input type="submit" id="button" value="Send"　class="btn-malformation">
+					<div class="field">
+						<input type="text" name="message" id="message" 　cols="30" rows="10" placeholder="問い合わせ内容"
+							class="contact_contents">
+							<p class="contact_text">※予約希望の方は希望の日時を入力下さい。</p>
+					</div>
+					<input type="submit" id="button" value="Send" 　class="btn-malformation">
 				</form>
-
+				<!-- <form id="form">
+					<div class="field">
+						<label for="from_name">from_name</label>
+						<input type="text" name="from_name" id="from_name">
+					</div>
+					<div class="field">
+						<label for="reply_to">reply_to</label>
+						<input type="text" name="reply_to" id="reply_to">
+					</div>
+					<div class="field">
+						<label for="tel">tel</label>
+						<input type="text" name="tel" id="tel">
+					</div>
+					<div class="field">
+						<label for="message">message</label>
+						<input type="text" name="message" id="message">
+					</div>
+				
+					<input type="submit" id="button" value="Send Email" >
+				</form> -->
+			
 			</section>
 		</main>
 		<!-- footer -->
@@ -210,12 +309,15 @@
 		<script defer src="./assets/js/drawer.js"></script>
 		<script defer src="./assets/js/iscroll.js"></script>
 		<script defer src="./assets/js/jquery.bgswitcher.js"></script>
-		<script type="text/javascript"
-  src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
-<script type="text/javascript">
-  emailjs.init('user_BRBeHC1xSHjo6nCG6k5XP')
-</script>
+		<script type="text/javascript">
+			emailjs.init('user_SgW6yelKdCE9DV96pSPz0')
+		</script>
+		<!-- cocowave用 -->
+					<!-- <script type="text/javascript">
+						emailjs.init('user_SgW6yelKdCE9DV96pSPz0') -->
+			</script>
 		<script defer src="./assets/js/main.js"></script>
 </body>
 
