スパンキーロゴ　周辺の写真追加

--- a/around.html
+++ b/around.html
@@ -85,7 +85,7 @@
 							<p class="around-tittle">GOOD DAY COFFEE</p>
 							<div class="detail filter-lofi">
 								<p>朝6時からオープンの民家に混ざった穴場カフェです！朝活したい方に最適です。</p>
-								<img src="" alt="">
+								<img src="./assets/img/gooday.JPG" alt="good day cafe">
 							</div>
 						</li>
 						<li>
