--- a/index.html
+++ b/index.html
@@ -203,11 +203,12 @@
 			<section id="price">
 				<h1 class="title-size">Price</h1>
 				<div class="price_btn">
-					<img src="./assets/img/spanky_1.PNG" alt="">
+
 					<ul class="price-nav">
 						<li class="price-content btn-1"> <a href="./day_price.html"> Click here!!</a></li>
 						<!-- <li class="price-content btn-2"><a href="./week_price.html"> Weekly</a></li> -->
 						<!-- <li class="price-content btn-3"><a href="./mounth.html">Monthly</a></li> -->
+						<li><img src="./assets/img/spanky_1.PNG" alt=""></li>
 					</ul>
 				</div>
 
