--- a/day_price.html
+++ b/day_price.html
@@ -71,7 +71,7 @@
 					<div class="around-detail">
 						<h1>Price</h1>
 						<p class="price-detail">¥25,000〜/1Day</p>
-						<p　class="calendar_detail">下記カレンダーに料金が記載されています</p>
+						<!-- <p　class="calendar_detail">下記カレンダーに料金が記載されています</p> -->
 						<div class="calendar">
 							<iframe src="https://calendar.google.com/calendar/embed?src=cocowavestay%40gmail.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>							
 							<p>5人以上は1人増えるごとに+¥2,500/泊です。<br>
