--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 		<div id="splash_logo"><img src="./assets/img/IMG_3238-removebg-preview.png" alt="" class="fadeUp"></div>
 		<!--/splash-->
 	</div>
+	<!-- topへ戻る -->
+	<div id="page_top"><img class="toplogo" src="./assets/img/test_1.png" alt=""></div>
 	<div id="container">
 		<!-- header -->
 		<header class="drawer drawer--right">
@@ -171,24 +173,26 @@
 				</div>
 					<img class="floor_plan" src="./assets/img/madori.png" alt="madori">
 					<ul class="room_gallery">
-						<li> <img src="./assets/img/betroom1.jpeg" alt="">
+						<li> <img src="./assets/img/sonota_1.JPG" alt="">
 						</li>
-						<li> <img src="./assets/img/livingroom.jpeg" alt="">
+						<li> <img src="./assets/img/sonota_2.JPG" alt="">
 						</li>
-						<li> <img src="./assets/img/livingroom2.jpeg" alt="">
+						<li> <img src="./assets/img/sonota_3.JPG" alt="">
 						</li>
-						<li> <img src="./assets/img/outlook.jpeg" alt="">
+						<li> <img src="./assets/img/sonota_6.JPG" alt="">
 						</li>
-						<li> <img src="./assets/img/terrace.jpeg" alt="">
+						<li> <img src="./assets/img/sonota_4.JPG" alt="">
 						</li>
-						<li> <img src="./assets/img/terrace_food.jpeg" alt="">
+						<li> <img src="./assets/img/sonota_5.png" alt="">
 						</li>
+
+						
 					</ul>
 					<div class="room-description">
 						<p>主な設備</p>
 						<p> ・キッチン(冷蔵庫、レンジ、トースター、炊飯器、ケトル、調理器具、食器類、IHコンロ) <br>
 							・Wi-Fi(室内・室外　仕事スペース有り)<br>
-							無料駐車場(3台)<br>
+							・無料駐車場(3台)<br>
 							・TV<br>
 							・洗濯機、乾燥機<br>
 							・AC,暖房<br>
