--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="about-contents">
 					<p>
 						ミッドセンチュリー×Surfスタイルをコンセプトに<br>
-						沖縄独特の外人住宅をリノベーションした一棟貸しタイプの民泊です。<br>
+						沖縄独特の外人住宅をリノベーションした一棟貸しタイプの宿泊施設です。<br>
 						CoCoWave の位置する北谷町は基地のある町で、<br>
 						沖縄ローカル×アメリカンスタイルがMIXしたユニークな街です。<br>
 						特に、徒歩5分圏内の砂辺・宮城海岸エリアでは、<br>
