--- a/index.html
+++ b/index.html
@@ -263,17 +263,17 @@
 				<p>〜問い合わせ〜</p>
 				<form id="form">
 					<div class="field">
-						<input type="text" name="from_name" id="from_name" placeholder="Name">
+						<input type="text" name="from_name" id="from_name" placeholder="Name" required	>
 					</div>
 					<div class="field">
-						<input type="text" name="reply_to" id="reply_to" placeholder="Email">
+						<input type="email" name="reply_to" id="reply_to" placeholder="Email" required>
 					</div>
 					<div class="field">
-						<input type="text" name="tel" id="tel" placeholder="Tel">
+						<input type="text" name="tel" id="tel" placeholder="Tel" required>
 					</div>
 					<div class="field">
 						<input type="text" name="message" id="message" 　cols="30" rows="10" placeholder="問い合わせ内容"
-							class="contact_contents">
+							class="contact_contents" required>
 							<p class="contact_text">※予約希望の方は希望の日時を入力下さい。</p>
 					</div>
 					<input type="submit" id="button" value="Send" 　class="btn-malformation">
