--- a/day_price.html
+++ b/day_price.html
@@ -73,7 +73,13 @@
 						<p class="price-detail">¥25,000〜/1Day</p>
 						<!-- <p　class="calendar_detail">下記カレンダーに料金が記載されています</p> -->
 						<div class="calendar">
-							<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FTokyo&showTitle=1&showTz=0&showCalendars=0&showTabs=0&showPrint=0&title=cocowave&src=Y29jb3dhdmVzdGF5QGdtYWlsLmNvbQ&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=amEuamFwYW5lc2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039BE5&color=%2333B679&color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>				</div>		
+							<iframe src="https://calendar.google.com/calendar/embed?src=cocowavestay%40gmail.com&ctz=Asia%2FTokyo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>							
+							<p>5人以上は1人増えるごとに+¥2,500/泊です。<br>
+								 Weekliyやmounthlyについてはメールでお問い合わせ下さい。
+							</p>	
+						<a href="./index.html#contact" class="btn-flat-stripe">ご予約はこちら</a>
+					</div>
+				</div>		
     </section>
 		<section id="price">
 			<ul class="price-nav"> 
